# ai-project-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Feedback.md  PRD.md  README.md  TODO.md  ai-project-template.code-workspace  docker-compose.yml  opencode.json
backend/: .dockerignore  Dockerfile  client.py  main.py  pyproject.toml
backend/app/: config.py  main.py  schemas.py  state.py
backend/app/prompts/: system.md
backend/app/routers/: chat.py  documents.py  threads.py
backend/app/services/: chat.py  graph.py  llm.py  parse.py  sse.py
backend/data/: nvidia-q3-2025-press-release-short.md  nvidia-q3-2025-press-release.md
backend/tests/: conftest.py  test_chat.py  test_documents.py  test_dummy.py  test_healthz.py  test_services.py  test_state.py  test_threads.py
frontend/: .dockerignore  .eslintcache  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/[threadId]/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/: MessageRenderer.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  types.ts
